...
        android:background="@color/light_blue"
        >
    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_reunion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
...
