<resources>
    <string name="app_name">Ma réu</string>

    <string name="room_name">Nom de la salle</string>
    <string name="meeting_time">Heure et date de la réunion</string>
    <string name="meeting_subject">Sujet de la réunion</string>
    <string name="mail_addresses">Participants à la réunion</string>
    <string name="filter_room">Filtrer par salle</string>
    <string name="filter_date">Filtrer par date</string>
    <string name="no_filter">Ne pas filtrer</string>
    <string name="cancel">Annuler</string>
    <string name="meeting_title">%1$s - %2$s - %3$s</string>

    <string name="attendees_error">Merci de saisir une adresse mail</string>
    <string name="subject_error">Merci de saisir un sujet de réunion</string>
    <string name="empty_attendees_error">Merci d\'ajouter des participants</string>
    <string name="test_subject">Sujet</string>
    <string name="overlapping_error">Merci de sélectionner une autre salle ou un intervalle de minimum 45min</string>

    <string-array name="rooms">
        <item>Réunion A</item>
        <item>Réunion B</item>
        <item>Réunion C</item>
        <item>Réunion D</item>
        <item>Réunion E</item>
        <item>Réunion F</item>
        <item>Réunion G</item>
        <item>Réunion H</item>
        <item>Réunion I</item>
        <item>Réunion J</item>

    </string-array>

</resources>